src/objects/KBCourseManagement__c.object
<CustomObject>
    <description>This is a junction object from WGU Courses to Mentor.
This is being used for assignment of Course(s) the Community Specialist will be assigned to enter in KB for.</description>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipName>CMKB_CourseManagment</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <label>Mentor</label>
        <referenceTo>Mentor__c</referenceTo>
        <relationshipName>CMKBCourseManagement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>KB Course Management</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KB Course Management</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>